# rust-vision-zero-assortment

./: Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
amplify/: Cargo.toml
amplify/.github/workflows/: ci-rust.yml
amplify/src/: amplify.rs  lib.rs  main.rs
