[package]
name = "amplify"
version = "0.1.0"
authors = ["Rémy Greinhofer <remy.greinhofer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
eyre = "0.6.5"
futures = "0.3.4"
regex = "1.4.5"
reqwest = { version = "0.11.2", features = ["json"] }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.3.0", features = ["full"] }
tokio-retry = "0.3.0"
tracing = "0.1"
tracing-subscriber = "0.2"
